--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /part01-Part01_03.OnceUponATime/target/
 /part01-Part01_01.Sandbox/target/
 /part01-Part01_04.Dinosaur/target/
+/part01-Part01_05.Message/target/
