--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /part01-Part01_01.Sandbox/target/
 /part01-Part01_04.Dinosaur/target/
 /part01-Part01_05.Message/target/
+/part01-Part01_06.HiAdaLovelace/target/
