--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /part01-Part01_04.Dinosaur/target/
 /part01-Part01_05.Message/target/
 /part01-Part01_06.HiAdaLovelace/target/
+/part01-Part01_07.MessageThreeTimes/target/
