--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /part01-Part01_05.Message/target/
 /part01-Part01_06.HiAdaLovelace/target/
 /part01-Part01_07.MessageThreeTimes/target/
+/part01-Part01_08.Greeting/target/
