--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /part01-Part01_08.Greeting/target/
 /part01-Part01_09.Conversation/target/
 /part01-Part01_10.Story/target/
+/part01-Part01_11.VariousVariables/target/
