--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /part01-Part01_16.SecondsInADay/target/
 /part01-Part01_17.SumOfTwoNumbers/target/
 /part01-Part01_18.SumOfThreeNumbers/target/
+/part01-Part01_19.AdditionFormula/target/
