--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /part01-Part01_20.MultiplicationFormula/target/
 /part01-Part01_21.AverageOfTwoNumbers/target/
 /part01-Part01_22.AverageOfThreeNumbers/target/
+/part01-Part01_23.SimpleCalculator/target/
