--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /part01-Part01_31.GradesAndPoints/target/
 /part01-Part01_32.OddOrEven/target/
 /part01-Part01_33.Password/target/
+/part01-Part01_34.Same/target/
