--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /part01-Part01_33.Password/target/
 /part01-Part01_34.Same/target/
 /part01-Part01_35.CheckingTheAge/target/
+/part01-Part01_36.LeapYear/target/
