--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /part02-Part02_06.AreWeThereYet/target/
 /part02-Part02_07.OnlyPositives/target/
 /part02-Part02_08.NumberOfNumbers/target/
+/part02-Part02_09.NumberOfNegativeNumbers/target/
