--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /part02-Part02_07.OnlyPositives/target/
 /part02-Part02_08.NumberOfNumbers/target/
 /part02-Part02_09.NumberOfNegativeNumbers/target/
+/part02-Part02_10.SumOfNumbers/target/
