--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@
 /part02-Part02_13.AverageOfPositiveNumbers/target/
 /part02-Part02_14.Counting/target/
 /part02-Part02_15.CountingToHundred/target/
+/part02-Part02_16.FromWhereToWhere/target/
