--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 /part02-Part02_14.Counting/target/
 /part02-Part02_15.CountingToHundred/target/
 /part02-Part02_16.FromWhereToWhere/target/
+/part02-Part02_17.SumOfASequence/target/
