--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /part02-Part02_17.SumOfASequence/target/
 /part02-Part02_18.SumOfASequenceTheSequel/target/
 /part02-Part02_19.Factorial/target/
+/part02-Part02_20.RepeatingBreakingAndRemembering/target/
