--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@
 /part02-Part02_22.Reprint/target/
 /part02-Part02_23.FromOneToParameter/target/
 /part02-Part02_24.FromParameterToOne/target/
+/part02-Part02_25.Division/target/
