--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /part02-Part02_26.DivisibleByThree/target/
 /part02-Part02_27.NumberUno/target/
 /part02-Part02_28.Word/target/
+/part02-Part02_29.Summation/target/
+/part02-Part02_30.Smallest/target/
