--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@
 /part02-Part02_33.StarSign/target/
 /part02-Part02_34.AdvancedAstrology/target/
 /part03-Part03_01.ThirdElement/target/
+/part03-Part03_02.SecondPlusThird/target/
