--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 /part02-Part02_34.AdvancedAstrology/target/
 /part03-Part03_01.ThirdElement/target/
 /part03-Part03_02.SecondPlusThird/target/
+/part03-Part03_03.IndexOutOfBoundsException/target/
