--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@
 /part03-Part03_01.ThirdElement/target/
 /part03-Part03_02.SecondPlusThird/target/
 /part03-Part03_03.IndexOutOfBoundsException/target/
+/part03-Part03_04.ListSize/target/
