--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@
 /part03-Part03_02.SecondPlusThird/target/
 /part03-Part03_03.IndexOutOfBoundsException/target/
 /part03-Part03_04.ListSize/target/
+/part03-Part03_05.LastInList/target/
