--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@
 /part03-Part03_03.IndexOutOfBoundsException/target/
 /part03-Part03_04.ListSize/target/
 /part03-Part03_05.LastInList/target/
+/part03-Part03_06.FirstAndLast/target/
